apps/the-button-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-the-button
  namespace: the-button-web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  selector:
    matchLabels: { app: web-the-button }
  template:
    metadata:
      labels: { app: web-the-button }
    spec:
      containers:
        - name: web-the-button
          image: ghcr.io/the-algovn/web-the-button:main
          ports: [{ containerPort: 80 }]
          readinessProbe:
            httpGet: { path: /the-button/, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /the-button/, port: 80 }
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests: { cpu: 25m, memory: 32Mi }
            limits: { memory: 128Mi }
      imagePullSecrets:
        - name: registry-creds
